--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,3 +39,20 @@
   }
 }
 
+/* Track */
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(141, 131, 131); 
+    border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #aaa6a6; 
+}
