--- a/frontend/src/layouts/style.css
+++ b/frontend/src/layouts/style.css
@@ -1,19 +1,14 @@
 @media only screen and (min-width: 1100px) {
   .studapp-blog {
     margin-top: 60px;
-    height: 500px;
+    height: 400px;
     width: 100%;
     background-color: 006A71;
     /* For browsers that do not support gradients */
     background-image: linear-gradient(to right top, #6667ab, #3d86ca, #00a4da, #00c0dc, #00d9d2, #17e6c4, #4cf2af, #7cfb94, #92fe7c, #aaff61, #c6ff40, #e3ff00);
     display: flex;
   }
-  .explore-page{
-    display: none;
-  }
   
-
-
   .explore-items{
     display: flow-root;
     flex-direction: row;
@@ -94,7 +89,7 @@
 @media only screen and (max-width: 1099px) {
   .studapp-blog {
     margin-top: 60px;
-    height: 300px;
+    height: 200px;
     width: 100%;
     background-color: 006A71;
     background-image: linear-gradient(to right top, #6667ab, #3d86ca, #00a4da, #00c0dc, #00d9d2, #17e6c4, #4cf2af, #7cfb94, #92fe7c, #aaff61, #c6ff40, #e3ff00);
@@ -104,11 +99,9 @@
   .slogan {
     display: block;
     font-size: 50px;
-    margin-block-start: 3em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    margin-left: 10px;
+    margin-block-start: 1em;
+    margin-block-end: 0.7em;
+    margin-left: 20%;
     font-weight: 400;
     overflow: hidden;
     text-align: left;
@@ -119,19 +112,7 @@
     display: none;
     color: #03494e;
   }
-  
-
-  .explore-page{
-    text-align: center;
-    margin-top: -50px;
-    margin-left: 100px;
-    margin-right: 100px;
-
-    height: 100%;
-  }
-  .side-explore{
-    display: none;
-  }
+ 
 
   .explore-items{
     display: flow-root;
@@ -144,3 +125,31 @@
   }
 }
 
+#loading{
+  border-radius: 100%;
+  opacity: 0.5;
+  width: 200px;
+  margin-left: 25%;
+  height: 200px;
+  position: fixed;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#edit-img{
+  width: 50%;
+  height: 50%;
+}
+
+file-btn{
+  width: 20px;
+  height: 20px;
+}
+
+.explore-page{
+  text-align: center;
+  margin-top: -50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  height: 100%;
+}
