--- a/frontend/src/User/style.css
+++ b/frontend/src/User/style.css
@@ -19,14 +19,11 @@
 .user-card-body img {
     border-radius: 100%;
     width: 100px;
-    margin-left: 40%;
+    margin-left: 100px;
+    margin-top: 20px;
     height: 100px;
 }
 
-#dropdown-basic-button{
-    margin-left: 90%;
-    align-items: center;
-}
 .user-posts{
     width: 80%;
     height: 500px;
@@ -39,18 +36,20 @@
     height: 50px;
     text-align: center;
     font-size: 40px;
-    font-weight: 700;
+    font-weight: 500;
 }
 #sign-out-btn{
     color: whitesmoke;
-    background-color: rgb(201, 90, 90);
+    background-color: rgb(209, 186, 186);
     font-weight: 600;
     border-radius: 10px;
     margin-top: 20px;
-    margin-left: 85%;
-    width: 10%;
+    margin-left: 75%;
+    border: none;
+    width: 60px;
 }
 .user-card-body h1 {
+    margin-top: 10px;
     margin-bottom: 100px;
     width: 90%;
     font-size: 24px;
@@ -98,7 +97,7 @@
 .signup-inputs button{
     margin-top: 20px;
     width: 40%;
-    margin-left: 150px;
+    margin-left: 0px;
     border-radius: 10px;
     color: rgb(255, 255, 255);
     background-color: rgb(52, 243, 148);
@@ -109,10 +108,8 @@
  }
 
  .profile{
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 100px;
-    width: 70%;
+    margin-top: 50px;
+    width: 300px;
     padding-bottom: 100%;
     display: flex;
     background-color: rgb(241, 241, 241);
@@ -120,4 +117,32 @@
     border-top-right-radius: 30px;
     position: fixed;
     margin-bottom: 300px;
+ }
+
+ .edit-link{
+    margin-left: -270px;
+    margin-top: 20px;
+    text-decoration: none;
+    color: rgb(218, 218, 218);
+    font-size: 16px;
+    padding: 5px;
+    border-radius: 10px;
+    height: 30px;
+    text-align: center;
+    background-color: rgb(61, 180, 170);
+    font-weight: 600;
+ }
+
+ .edit-link:hover{
+    text-decoration: wavy;
+    font-size: 18px;
+    padding: 5px;
+    color: #ccc;
+    border-radius: 10px;
+    height: 35px;
+    font-weight: 400;
+ }
+
+ .profile-form{
+    display: flex;
  }
