--- a/frontend/src/posts/style.css
+++ b/frontend/src/posts/style.css
@@ -7,6 +7,10 @@
 
     }
 
+    .colorful-div{
+        width: 1.5%;
+        background-image: linear-gradient(to bottom, #495C83, #7A86B6, #A8A4CE, #C8B6E2);
+     }
 
     .post-title {
         font-size: 28px;
@@ -19,6 +23,37 @@
         width: 500px;
         height: 75px;
     }
+
+  .post{
+    margin-left: 10%;
+    margin-bottom: 200px;
+    margin-top: 100px;
+    margin-right: 10%;
+    width: 70%;
+    border-radius: 10px;
+    border: solid rgb(211, 211, 211) 2px;
+  }
+
+  .post-body img {
+    width: 50%;
+    height: 50%;
+   margin-left: 10%;
+   margin-top: 100px;
+   border-radius: 10px;
+  }
+
+  .post-info{
+    width: 100%;
+    height: 200px;
+    margin-left: 10%;
+  }
+
+  .post-content {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    
+  }
 
     .post-card {
         margin: auto;
@@ -78,16 +113,33 @@
         padding-left: 10px;
         padding-top: 10px;
         margin: auto;
+        width: 50%;
     }
 
     .post-list {
-        margin-top: -260px;
+        margin-top: 100px;
+        margin-left: 100px;
         width: 800px;
         height: 100%;
         display: flex;
         margin-right: 200px;
         flex-direction: column;
         align-items: center;
+    }
+
+    .edit-form {
+        margin-left: 30%;
+        margin-right: 30%;
+        width: 70%;
+        margin-top: -50px;
+        margin-bottom: 100px;
+        height: 100%;
+        display: flex;
+        border-radius: 10px;
+        width: 600px;
+        background-color: azure;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
     }
 
 }
@@ -124,6 +176,10 @@
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     }
+    .colorful-div{
+        width: 1.5%;
+        background-image: linear-gradient(to bottom, #495C83, #7A86B6, #A8A4CE, #C8B6E2);
+     }
 
     .post-author {
         margin: auto;
@@ -178,6 +234,50 @@
         width: 100%;
         margin-top: 10px;
     }
+
+
+  .post{
+    margin-bottom: 200px;
+    margin-top: 100px;
+    width: 100%;
+    border-radius: 10px;
+    border: solid rgb(211, 211, 211) 2px;
+      }
+
+  .post-body img {
+    width: 40%;
+    height: 40%;
+   margin-top: 100px;
+   border-radius: 10px;
+   margin-left: 30%;
+  }
+
+  .post-info{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    height: 100px;
+  }
+
+  .post-content {
+    margin-bottom: 100px;
+    width: 90%;
+    overflow: auto;
+    margin: 5%;
+  }
+
+  .edit-form {
+    margin-left: 10%;
+    margin-top: -50px;
+    margin-bottom: 100px;
+    height: 100%;
+    display: flex;
+    border-radius: 10px;
+    width: 600px;
+    background-color: azure;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
 
 }
 
@@ -244,26 +344,19 @@
     max-height: 100px;
 }
 
-.edit-form {
-    margin: 200px;
-    width: 400px;
-    height: 100%;
-    display: flex;
-    border-radius: 10px;
-    width: 600px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-}
 
 .edit-form input {
     margin: 20px;
     height: 50px;
     width: 100%;
+    border: solid rgb(145, 145, 145) 3px;  
     border-radius: 10px;
     text-align: center;
+    border: none;
 }
 
-.edit-form button {
+#update-post-submit {
     margin-bottom: 20px;
     margin-top: 20px;
     width: 50%;
@@ -273,6 +366,7 @@
     color: azure;
     font-size: 18px;
     font-weight: 700;
+    border: none;
     background-color: rgb(23, 160, 46);
 }
 
@@ -282,6 +376,7 @@
     height: 400px;
     margin: 20px;
     text-align: center;
+    border: none;
 }
 
 .usr-post-card {
@@ -298,3 +393,32 @@
     text-decoration: none;
     color: black;
   }
+  .link:hover {
+    text-decoration: none;
+    color : #495C83;
+  }
+
+  .error{
+    color: red;
+    text-align: center;
+ }
+ .editbtn{
+    margin-top: 20px;
+    height: 50px;
+    width: 50px;
+    margin-bottom: 10px;
+ }
+
+ .card-more{
+    width: 70px;
+ }
+ .upload-img{
+    margin-left: -90%;
+    margin-top: 700px;
+    width: 100%;
+    margin-bottom: 20px;
+ }
+
+
+
+
