--- a/frontend/src/bars/style.css
+++ b/frontend/src/bars/style.css
@@ -1,7 +1,5 @@
-@media only screen and (min-width: 1100px) {
-    .bottom-nav{
-        display: none;
-    }
+@media only screen and (min-width: 995px) {
+  
     
 }
 .bottom-nav-item{
@@ -9,7 +7,21 @@
 }
 
 .nav-icon{
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
+.navi-form{
+    width: 500px;
+    height: 50px;
+    margin-top: 5px;
+}
+@media only screen and (max-width: 994px) {
+
+.collapse{
+    background-color:aliceblue ;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 20px;
+    height: 300px;
+}}
